--- a/site_config.yml
+++ b/site_config.yml
@@ -1,30 +1,7 @@
-﻿Title: ZOA Charts
+﻿Title: ZHN Charts
 Airports:
   Bravo:
-    - SFO
+    - HNL
   Charlie:
-    - OAK
-    - SJC
-    - SMF
-    - RNO
-    - FAT
-    - MRY
+    - OGG
   Delta:
-    - APC
-    - CCR
-    - CIC
-    - HWD
-    - LVK
-    - MER
-    - MHR
-    - MOD
-    - NUQ
-    - PAO
-    - RDD
-    - RHV
-    - SAC
-    - SCK
-    - SNS
-    - SQL
-    - STS
-    - TRK
