--- a/site_config.yml
+++ b/site_config.yml
@@ -1,24 +1,24 @@
-﻿Title: ZID Charts
+﻿Title: ZDV Charts
 Airports:
   Bravo:
-    - CVG
+    - DEN
   Charlie:
-    - CMH
-    - EVV
-    - IND
-    - LEX
-    - SDF
+    - COS
   Delta:
-    - TZR
-    - LOU
-    - CRW
-    - MIE
-    - FTK
-    - HUF
-    - HTS
-    - LUK
-    - OSU
-    - PKB
-    - LCK
-    - ILN
-    - FFO
+    - ASE
+    - BKF
+    - GUR
+    - CPR
+    - APA
+    - CYS
+    - CFO
+    - EGE
+    - RCA
+    - FCS
+    - FMN
+    - GJT
+    - FNL
+    - PUB
+    - RAP
+    - BJC
+    - AAF
